--- a/privacy-policy.html
+++ b/privacy-policy.html
@@ -26,7 +26,20 @@
       <nav class="site-nav">
         <ul>
           <li><a href="index.html">Home</a></li>
-          <li><a href="top-casinos.html">Top casinos</a></li>
+          <div class="dropdown">
+            <button class="dropbtn menu active">Top Casinos <i class="fa-solid fa-caret-down"
+                    style="color: #ea713c; padding-left: 4px;"></i></button>
+            <div class="dropdown-content">
+                <a href="caesars-windsor.html">Caesars Windsor</a>
+                <a href="casino-niagara.html">Casino Niagara</a>
+                <a href="casinode-monttremblant.html">Casino de Mont-Tremblant</a>
+                <a href="casino-ramaresort.html">Casino Rama Resort</a>
+                <a href="riverock-casino.html">River Rock Casino Resort</a>
+                <a href="casino-dulacleamy.html">Casino du Lac-Leamy</a>
+                <a href="fallsview-casino.html">Fallsview Casino Resort</a>
+                <a href="hard-rock.html">Hard Rock Casino Vancouver</a>
+            </div>
+        </div>
           <li><a href="about-us.html">About us</a></li>
           <li><a href="contact-us.html">Contact us</a></li>
           <li class="closed-menu">
