--- a/reviews.html
+++ b/reviews.html
@@ -12,7 +12,7 @@
   <link rel="stylesheet" href="css/style.css">
   <link rel="stylesheet" href="css/responsive.css">
   <link rel="icon" href="images/favicon.png" type="image/x-icon">
-  <title>Contact us</title>
+  <title>Reviews</title>
 </head>
 
 <body>
@@ -22,7 +22,6 @@
       <div class="site-logo">
         <a href="index.html"><img src="images/header-logo.jpg" alt="site-logo"></a>
       </div>
-
       <nav class="site-nav">
         <ul>
           <li><a href="index.html">Home</a></li>
@@ -40,8 +39,9 @@
                 <a href="hard-rock.html">Hard Rock Casino Vancouver</a>
             </div>
         </div>
+          <li><a href="reviews.html" class="menu active">Reviews</a></li>
           <li><a href="about-us.html">About us</a></li>
-          <li><a href="contact-us.html" class="menu active">Contact us</a></li>
+          <li><a href="contact-us.html">Contact us</a></li>
           <li class="closed-menu">
             <a href="#">×</a>
           </li>
@@ -58,61 +58,20 @@
   </header>
   <!-- site header end -->
 
-  <!-- site contactbanner start -->
-  <section class="contact-section">
+  <!-- site reviewsbanner start -->
+  <section class="reviews-section">
     <div class="container">
       <div class="row">
         <div class="banner__text">
-          <h1>Contact us</h1>
+          <h1>Reviews</h1>
         </div>
       </div>
     </div>
   </section>
 
-  <!-- site contactbanner end -->
+  <!-- site reviewsbanner end -->
 
-  <!-- site contactform start -->
-  <section class="contact__main">
-    <div class="container">
-      <h2>Feel free to reach out Gigacasinos !</h2>
-      <div class="row">
-        <div class="col-lg-12 col-md-12 col-sm-12">
-          <div class="about_us_content">
-            <form action="..">
-              <div class="row">
-                <div class="col-md-6">
-                  <div class="form-group">
-                    <label for="name">Name</label>
-                    <input type="text" id="name" class="input-control">
-                  </div>
-                </div>
-                <div class="col-md-6">
-                  <div class="form-group">
-                    <label for="email">Email</label>
-                    <input type="email" id="email" class="input-control">
-                  </div>
-                </div>
-              </div>
-              <div class="form-group">
-                <label for="phone">Your phone:</label>
-                <input type="text" id="phone" class="input-control">
-              </div>
 
-              <div class="form-group">
-                <label for="message">Message</label>
-                <textarea name="Message" id="message" cols="20" rows="8" class="input-control"></textarea>
-              </div>
-
-              <div class="form-group text-center">
-                <button class="submit-btn">submit</button>
-              </div>
-            </form>
-          </div>
-        </div>
-      </div>
-    </div>
-  </section>
-  <!-- site contactform end -->
 
   <!-- site footer start -->
   <div class="footer">
@@ -130,10 +89,11 @@
         </div>
         <div class="col-lg-4 col-md-4 col-sm-12">
           <div class="footer-links">
-            <h3>Menu</h3>
+            <h3>Linker</h3>
             <ul>
               <li><a href="index.html">Home</a></li>
               <li><a href="top-casinos.html">Top casinos</a></li>
+              <li><a href="reviews.html">Reviews</a></li>
               <li><a href="about-us.html">About us</a></li>
               <li><a href="contact-us.html">Contact us</a></li>
               <li><a href="privacy-policy.html">Privacy Policy</a></li>
@@ -143,10 +103,12 @@
         </div>
         <div class="col-lg-4 col-md-4 col-sm-12">
           <div class="footer-adresse">
-            <h3>Email</h3>
+            <h3>Kontaktinfo</h3>
+            <p>Tjuvholmen allé 3, 0252 Oslo,<br> Norwegen </p>
             <div class="footer-mails">
               <div class="mails-names">
-                <a href="mailto:info@gigacasinos.com">info@gigacasinos.com</a>
+                <i class="fa-solid fa-phone-volume" style="color: #c19d60;"></i>
+                <a href="tel:+4551797719">+45 51 79 77 19</a>
               </div>
             </div>
           </div>
