--- a/about-us.html
+++ b/about-us.html
@@ -27,8 +27,9 @@
                 <ul>
                     <li><a href="index.html">Home</a></li>
                     <div class="dropdown">
-                        <button class="dropbtn menu active">Top Casinos <i class="fa-solid fa-caret-down"
-                                style="color: #ea713c; padding-left: 4px;"></i></button>
+                        <a href="top-casinos.html"><button class="dropbtn menu active">Top Casinos <i
+                                    class="fa-solid fa-caret-down"
+                                    style="color: #ea713c; padding-left: 4px;"></i></button></a>
                         <div class="dropdown-content">
                             <a href="caesars-windsor.html">Caesars Windsor</a>
                             <a href="casino-niagara.html">Casino Niagara</a>
