--- a/index.html
+++ b/index.html
@@ -27,19 +27,19 @@
         <ul>
           <li><a href="index.html" class="menu active">Home</a></li>
           <div class="dropdown">
-            <button class="dropbtn menu active">Top Casinos <i class="fa-solid fa-caret-down"
-                    style="color: #ea713c; padding-left: 4px;"></i></button>
+            <a href="top-casinos.html"><button class="dropbtn menu active">Top Casinos <i class="fa-solid fa-caret-down"
+                  style="color: #ea713c; padding-left: 4px;"></i></button></a>
             <div class="dropdown-content">
-                <a href="caesars-windsor.html">Caesars Windsor</a>
-                <a href="casino-niagara.html">Casino Niagara</a>
-                <a href="casinode-monttremblant.html">Casino de Mont-Tremblant</a>
-                <a href="casino-ramaresort.html">Casino Rama Resort</a>
-                <a href="riverock-casino.html">River Rock Casino Resort</a>
-                <a href="casino-dulacleamy.html">Casino du Lac-Leamy</a>
-                <a href="fallsview-casino.html">Fallsview Casino Resort</a>
-                <a href="hard-rock.html">Hard Rock Casino Vancouver</a>
+              <a href="caesars-windsor.html">Caesars Windsor</a>
+              <a href="casino-niagara.html">Casino Niagara</a>
+              <a href="casinode-monttremblant.html">Casino de Mont-Tremblant</a>
+              <a href="casino-ramaresort.html">Casino Rama Resort</a>
+              <a href="riverock-casino.html">River Rock Casino Resort</a>
+              <a href="casino-dulacleamy.html">Casino du Lac-Leamy</a>
+              <a href="fallsview-casino.html">Fallsview Casino Resort</a>
+              <a href="hard-rock.html">Hard Rock Casino Vancouver</a>
             </div>
-        </div>
+          </div>
           <li><a href="about-us.html">About us</a></li>
           <li><a href="contact-us.html">Contact us</a></li>
           <li class="closed-menu">
@@ -99,12 +99,15 @@
         <div class="col-lg-4 col-sm-12">
           <div class="threetiles-card">
             <div class="threetiles-img">
-              <img src="images/threetilescard1.jpeg" class="img-fluid" alt="threetilescard1">
+              <a href="casino-niagara.html" target="_blank"><img src="images/threetilescard1.jpeg" class="img-fluid"
+                  alt="threetilescard1"></a>
             </div>
             <div class="threetilescard-inner">
-              <h3>Casino Niagara - Niagara Falls,
-                <span>Ontario</span>
-              </h3>
+              <a href="casino-niagara.html" target="_blank">
+                <h3>Casino Niagara - Niagara Falls,
+                  <span>Ontario</span>
+                </h3>
+              </a>
               <p>Casino Niagara is a popular casino resort
                 located in the heart of Niagara Falls. It offers a wide range of gaming options,
                 including slots, table games, and poker. Visitors can also enjoy live entertainment,
@@ -116,12 +119,15 @@
         <div class="col-lg-4 col-sm-12">
           <div class="threetiles-card">
             <div class="threetiles-img">
-              <img src="images/threetilescard2.jpeg" class="img-fluid" alt="threetilescard2">
+              <a href="caesars-windsor.html" target="_blank"><img src="images/threetilescard2.jpeg" class="img-fluid"
+                  alt="threetilescard2"></a>
             </div>
             <div class="threetilescard-inner">
-              <h3>Caesars Windsor Hotel & Casino - Windsor,
-                <span>Ontario</span>
-              </h3>
+              <a href="caesars-windsor.html" target="_blank">
+                <h3>Caesars Windsor Hotel & Casino - Windsor,
+                  <span>Ontario</span>
+                </h3>
+              </a>
               <p>Caesars Windsor is a luxurious
                 casino resort situated on the Windsor riverfront, directly across from Detroit,
                 Michigan. It features a large casino with an array of gaming options, a hotel with
@@ -133,12 +139,15 @@
         <div class="col-lg-4  col-sm-12">
           <div class="threetiles-card">
             <div class="threetiles-img">
-              <img src="images/threetilescard3.jpg" class="img-fluid" alt="threetilescard3">
+              <a href="casinode-monttremblant.html" target="_blank"><img src="images/threetilescard3.jpg"
+                  class="img-fluid" alt="threetilescard3"></a>
             </div>
             <div class="threetilescard-inner">
-              <h3>Casino de Mont-Tremblant - Mont-Tremblant,
-                <span>Quebec</span>
-              </h3>
+              <a href="casinode-monttremblant.html" target="_blank">
+                <h3>Casino de Mont-Tremblant - Mont-Tremblant,
+                  <span>Quebec</span>
+                </h3>
+              </a>
               <p>Casino de Mont-Tremblant is
                 a beautiful casino nestled in the scenic Laurentian Mountains in Quebec. While it
                 may be smaller in scale compared to some other casinos, it offers a cozy and
