--- a/terms-conditions.html
+++ b/terms-conditions.html
@@ -27,19 +27,19 @@
         <ul>
           <li><a href="index.html">Home</a></li>
           <div class="dropdown">
-            <button class="dropbtn menu active">Top Casinos <i class="fa-solid fa-caret-down"
-                    style="color: #ea713c; padding-left: 4px;"></i></button>
+            <a href="top-casinos.html"><button class="dropbtn menu active">Top Casinos <i class="fa-solid fa-caret-down"
+                  style="color: #ea713c; padding-left: 4px;"></i></button></a>
             <div class="dropdown-content">
-                <a href="caesars-windsor.html">Caesars Windsor</a>
-                <a href="casino-niagara.html">Casino Niagara</a>
-                <a href="casinode-monttremblant.html">Casino de Mont-Tremblant</a>
-                <a href="casino-ramaresort.html">Casino Rama Resort</a>
-                <a href="riverock-casino.html">River Rock Casino Resort</a>
-                <a href="casino-dulacleamy.html">Casino du Lac-Leamy</a>
-                <a href="fallsview-casino.html">Fallsview Casino Resort</a>
-                <a href="hard-rock.html">Hard Rock Casino Vancouver</a>
+              <a href="caesars-windsor.html">Caesars Windsor</a>
+              <a href="casino-niagara.html">Casino Niagara</a>
+              <a href="casinode-monttremblant.html">Casino de Mont-Tremblant</a>
+              <a href="casino-ramaresort.html">Casino Rama Resort</a>
+              <a href="riverock-casino.html">River Rock Casino Resort</a>
+              <a href="casino-dulacleamy.html">Casino du Lac-Leamy</a>
+              <a href="fallsview-casino.html">Fallsview Casino Resort</a>
+              <a href="hard-rock.html">Hard Rock Casino Vancouver</a>
             </div>
-        </div>
+          </div>
           <li><a href="about-us.html">About us</a></li>
           <li><a href="contact-us.html">Contact us</a></li>
           <li class="closed-menu">
@@ -132,14 +132,14 @@
             consents to do so;</li>
           <li>The Comments do not invade any intellectual property right, including without limitation
             copyright, patent or trademark of any third party;</li>
-          </ul>
-          <p>The Comments do not contain any defamatory, libelous, offensive, indecent or otherwise
-            unlawful material which is an invasion of privacy</p>
-          <p>The Comments will not be used to solicit or promote business or custom or present
-            commercial activities or unlawful activity.</p>
-          <p>You hereby grant gigacasinos.com a non-exclusive license to use, reproduce, edit and
-            authorize others to use, reproduce and edit any of your Comments in any and all forms,
-            formats or media.</p>
+        </ul>
+        <p>The Comments do not contain any defamatory, libelous, offensive, indecent or otherwise
+          unlawful material which is an invasion of privacy</p>
+        <p>The Comments will not be used to solicit or promote business or custom or present
+          commercial activities or unlawful activity.</p>
+        <p>You hereby grant gigacasinos.com a non-exclusive license to use, reproduce, edit and
+          authorize others to use, reproduce and edit any of your Comments in any and all forms,
+          formats or media.</p>
         <h4>Hyperlinking to our Content</h4>
         <p>The following organizations may link to our Website without prior written approval:</p>
         <ul>
