--- a/casino-dulacleamy.html
+++ b/casino-dulacleamy.html
@@ -26,19 +26,19 @@
         <ul>
           <li><a href="index.html">Home</a></li>
           <div class="dropdown">
-            <button class="dropbtn menu active">Top Casinos <i class="fa-solid fa-caret-down"
-                    style="color: #ea713c; padding-left: 4px;"></i></button>
+            <a href="top-casinos.html"><button class="dropbtn menu active">Top Casinos <i class="fa-solid fa-caret-down"
+                  style="color: #ea713c; padding-left: 4px;"></i></button></a>
             <div class="dropdown-content">
-                <a href="caesars-windsor.html">Caesars Windsor</a>
-                <a href="casino-niagara.html">Casino Niagara</a>
-                <a href="casinode-monttremblant.html">Casino de Mont-Tremblant</a>
-                <a href="casino-ramaresort.html">Casino Rama Resort</a>
-                <a href="riverock-casino.html">River Rock Casino Resort</a>
-                <a href="casino-dulacleamy.html">Casino du Lac-Leamy</a>
-                <a href="fallsview-casino.html">Fallsview Casino Resort</a>
-                <a href="hard-rock.html">Hard Rock Casino Vancouver</a>
+              <a href="caesars-windsor.html">Caesars Windsor</a>
+              <a href="casino-niagara.html">Casino Niagara</a>
+              <a href="casinode-monttremblant.html">Casino de Mont-Tremblant</a>
+              <a href="casino-ramaresort.html">Casino Rama Resort</a>
+              <a href="riverock-casino.html">River Rock Casino Resort</a>
+              <a href="casino-dulacleamy.html">Casino du Lac-Leamy</a>
+              <a href="fallsview-casino.html">Fallsview Casino Resort</a>
+              <a href="hard-rock.html">Hard Rock Casino Vancouver</a>
             </div>
-        </div>
+          </div>
           <li><a href="about-us.html">About us</a></li>
           <li><a href="contact-us.html">Contact us</a></li>
           <li class="closed-menu">
@@ -157,14 +157,14 @@
         </div>
         <div class="col-lg-4 col-md-4 col-sm-12">
           <div class="footer-adresse">
-              <h3>Email</h3>
-              <div class="footer-mails">
-                  <div class="mails-names">
-                    <a href="mailto:info@gigacasinos.com">info@gigacasinos.com</a>
-                  </div>
+            <h3>Email</h3>
+            <div class="footer-mails">
+              <div class="mails-names">
+                <a href="mailto:info@gigacasinos.com">info@gigacasinos.com</a>
               </div>
+            </div>
           </div>
-      </div>
+        </div>
       </div>
     </div>
   </div>
