--- a/contact-us.html
+++ b/contact-us.html
@@ -27,19 +27,19 @@
         <ul>
           <li><a href="index.html">Home</a></li>
           <div class="dropdown">
-            <button class="dropbtn menu active">Top Casinos <i class="fa-solid fa-caret-down"
-                    style="color: #ea713c; padding-left: 4px;"></i></button>
+            <a href="top-casinos.html"><button class="dropbtn menu active">Top Casinos <i class="fa-solid fa-caret-down"
+                  style="color: #ea713c; padding-left: 4px;"></i></button></a>
             <div class="dropdown-content">
-                <a href="caesars-windsor.html">Caesars Windsor</a>
-                <a href="casino-niagara.html">Casino Niagara</a>
-                <a href="casinode-monttremblant.html">Casino de Mont-Tremblant</a>
-                <a href="casino-ramaresort.html">Casino Rama Resort</a>
-                <a href="riverock-casino.html">River Rock Casino Resort</a>
-                <a href="casino-dulacleamy.html">Casino du Lac-Leamy</a>
-                <a href="fallsview-casino.html">Fallsview Casino Resort</a>
-                <a href="hard-rock.html">Hard Rock Casino Vancouver</a>
+              <a href="caesars-windsor.html">Caesars Windsor</a>
+              <a href="casino-niagara.html">Casino Niagara</a>
+              <a href="casinode-monttremblant.html">Casino de Mont-Tremblant</a>
+              <a href="casino-ramaresort.html">Casino Rama Resort</a>
+              <a href="riverock-casino.html">River Rock Casino Resort</a>
+              <a href="casino-dulacleamy.html">Casino du Lac-Leamy</a>
+              <a href="fallsview-casino.html">Fallsview Casino Resort</a>
+              <a href="hard-rock.html">Hard Rock Casino Vancouver</a>
             </div>
-        </div>
+          </div>
           <li><a href="about-us.html">About us</a></li>
           <li><a href="contact-us.html" class="menu active">Contact us</a></li>
           <li class="closed-menu">
