--- a/top-casinos.html
+++ b/top-casinos.html
@@ -27,8 +27,9 @@
                 <ul>
                     <li><a href="index.html">Home</a></li>
                     <div class="dropdown">
-                        <button class="dropbtn menu active">Top Casinos <i class="fa-solid fa-caret-down"
-                                style="color: #ea713c; padding-left: 4px;"></i></button>
+                        <a href="top-casinos.html"><button class="dropbtn menu active">Top Casinos <i
+                                    class="fa-solid fa-caret-down"
+                                    style="color: #ea713c; padding-left: 4px;"></i></button></a>
                         <div class="dropdown-content">
                             <a href="caesars-windsor.html">Caesars Windsor</a>
                             <a href="casino-niagara.html">Casino Niagara</a>
@@ -130,7 +131,7 @@
                             <p class="rated-star"><i class="fa fa-star" aria-hidden="true"></i></p>
                         </div>
                     </div>
-                    
+
                     <div class="reviewflex">
                         <div class="resturent-button">
                             <a href="https://www.caesars.com/caesars-windsor" target="_blank">Visit</a>
@@ -211,12 +212,12 @@
                             BC V6X
                             3P8,
                             Canada</p>
-                            <div class="main-rate-star">
-                                <p class="rated-star"><i class="fa fa-star" aria-hidden="true"></i></p>
-                                <p class="rated-star"><i class="fa fa-star" aria-hidden="true"></i></p>
-                                <p class="rated-star"><i class="fa fa-star" aria-hidden="true"></i></p>
-                                <p class="rated-star"><i class="fa fa-star" aria-hidden="true"></i></p>
-                            </div>
+                        <div class="main-rate-star">
+                            <p class="rated-star"><i class="fa fa-star" aria-hidden="true"></i></p>
+                            <p class="rated-star"><i class="fa fa-star" aria-hidden="true"></i></p>
+                            <p class="rated-star"><i class="fa fa-star" aria-hidden="true"></i></p>
+                            <p class="rated-star"><i class="fa fa-star" aria-hidden="true"></i></p>
+                        </div>
                     </div>
                     <div class="reviewflex">
                         <div class="resturent-button">
@@ -246,12 +247,12 @@
                             QC J8Y
                             6W3,
                             Canada</p>
-                            <div class="main-rate-star">
-                                <p class="rated-star"><i class="fa fa-star" aria-hidden="true"></i></p>
-                                <p class="rated-star"><i class="fa fa-star" aria-hidden="true"></i></p>
-                                <p class="rated-star"><i class="fa fa-star" aria-hidden="true"></i></p>
-                                <p class="rated-star"><i class="fa fa-star" aria-hidden="true"></i></p>
-                            </div>
+                        <div class="main-rate-star">
+                            <p class="rated-star"><i class="fa fa-star" aria-hidden="true"></i></p>
+                            <p class="rated-star"><i class="fa fa-star" aria-hidden="true"></i></p>
+                            <p class="rated-star"><i class="fa fa-star" aria-hidden="true"></i></p>
+                            <p class="rated-star"><i class="fa fa-star" aria-hidden="true"></i></p>
+                        </div>
                     </div>
                     <div class="reviewflex">
                         <div class="resturent-button">
@@ -283,12 +284,12 @@
                             Falls, ON
                             L2G 7X5,
                             Canada</p>
-                            <div class="main-rate-star">
-                                <p class="rated-star"><i class="fa fa-star" aria-hidden="true"></i></p>
-                                <p class="rated-star"><i class="fa fa-star" aria-hidden="true"></i></p>
-                                <p class="rated-star"><i class="fa fa-star" aria-hidden="true"></i></p>
-                                <p class="rated-star"><i class="fa fa-star" aria-hidden="true"></i></p>
-                            </div>
+                        <div class="main-rate-star">
+                            <p class="rated-star"><i class="fa fa-star" aria-hidden="true"></i></p>
+                            <p class="rated-star"><i class="fa fa-star" aria-hidden="true"></i></p>
+                            <p class="rated-star"><i class="fa fa-star" aria-hidden="true"></i></p>
+                            <p class="rated-star"><i class="fa fa-star" aria-hidden="true"></i></p>
+                        </div>
                     </div>
                     <div class="reviewflex">
                         <div class="resturent-button">
@@ -322,12 +323,12 @@
                             , BC V3K
                             6W3,
                             Canada</p>
-                            <div class="main-rate-star">
-                                <p class="rated-star"><i class="fa fa-star" aria-hidden="true"></i></p>
-                                <p class="rated-star"><i class="fa fa-star" aria-hidden="true"></i></p>
-                                <p class="rated-star"><i class="fa fa-star" aria-hidden="true"></i></p>
-                                <p class="rated-star"><i class="fa fa-star" aria-hidden="true"></i></p>
-                            </div>
+                        <div class="main-rate-star">
+                            <p class="rated-star"><i class="fa fa-star" aria-hidden="true"></i></p>
+                            <p class="rated-star"><i class="fa fa-star" aria-hidden="true"></i></p>
+                            <p class="rated-star"><i class="fa fa-star" aria-hidden="true"></i></p>
+                            <p class="rated-star"><i class="fa fa-star" aria-hidden="true"></i></p>
+                        </div>
                     </div>
                     <div class="reviewflex">
                         <div class="resturent-button">
