--- a/about-us.html
+++ b/about-us.html
@@ -12,7 +12,7 @@
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="css/responsive.css">
     <link rel="icon" href="images/favicon.png" type="image/x-icon">
-    <title>About us</title>
+    <title>About usgj,hsWSSS</title>
 </head>
 
 <body>
