--- a/top-casinos.html
+++ b/top-casinos.html
@@ -117,8 +117,8 @@
             <div class="row restaurant">
                 <div class="main-img-text-content">
                     <div class="restaurant-img">
-                        <a href="https://www.caesars.com/caesars-windsor" target="_blank"> <img
-                                src="images/topcasinocard2.jpg" class="img-fluid" alt="topcasinocard2"></a>
+                        <a href="https://casinoniagara.com" target="_blank"> <img src="images/topcasinocard2.jpg"
+                                class="img-fluid" alt="topcasinocard2"></a>
                     </div>
                     <div class="restaurent-text">
                         <h4>Casino Niagara</h4>
@@ -134,7 +134,7 @@
 
                     <div class="reviewflex">
                         <div class="resturent-button">
-                            <a href="https://www.caesars.com/caesars-windsor" target="_blank">Visit</a>
+                            <a href="https://casinoniagara.com" target="_blank">Visit</a>
                         </div>
                         <div class="resturent-button review">
                             <a href="casino-niagara.html" target="_blank">Review</a>
@@ -145,8 +145,8 @@
             <div class="row restaurant">
                 <div class="main-img-text-content">
                     <div class="restaurant-img">
-                        <a href="https://casinoniagara.com" target="_blank"> <img src="images/topcasinocard3.jpg"
-                                class="img-fluid" alt="topcasinocard3"></a>
+                        <a href="https://casinos.lotoquebec.com/fr/monttremblant" target="_blank"> <img
+                                src="images/topcasinocard3.jpg" class="img-fluid" alt="topcasinocard3"></a>
                     </div>
                     <div class="restaurent-text">
                         <h4>Casino de Mont-Tremblant</h4>
@@ -160,7 +160,7 @@
                     </div>
                     <div class="reviewflex">
                         <div class="resturent-button">
-                            <a href="https://casinoniagara.com" target="_blank">Visit</a>
+                            <a href="https://casinos.lotoquebec.com/fr/monttremblant" target="_blank">Visit</a>
                         </div>
                         <div class="resturent-button review">
                             <a href="casinode-monttremblant.html" target="_blank">Review</a>
