--- a/top-casinos.html
+++ b/top-casinos.html
@@ -90,8 +90,8 @@
             <div class="row">
                 <div class="main-img-text-content">
                     <div class="restaurant-img">
-                        <a href="https://www.venetianmacao.com/" target="_blank"> <img src="images/topcasinocard1.jpg"
-                                class="img-fluid" alt="topcasinocard1"></a>
+                        <a href="https://www.caesars.com/caesars-windsor" target="_blank"> <img
+                                src="images/topcasinocard1.jpg" class="img-fluid" alt="topcasinocard1"></a>
                     </div>
                     <div class="restaurent-text">
                         <h4>Caesars Windsor Hotel & Casino</h4>
