--- a/top-casinos.html
+++ b/top-casinos.html
@@ -84,7 +84,7 @@
     </section>
     <!-- site starttext end -->
 
-    <!-- site topcasinostruepath start -->
+    <!-- site topcasinos start -->
     <section class="casino__cards">
         <div class="container">
             <div class="row">
@@ -342,7 +342,7 @@
             </div>
         </div>
     </section>
-    <!-- site topcasinostruepath end -->
+    <!-- site topcasino end -->
 
     <!-- site Faqsection start -->
     <div class="faq-section">
